objects/Camping_Item__c.object
<CustomObject><fields>
        <fullName>Packed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Packed</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Camping Item</label><nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Camping Items</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>